# joyagent-jdgenie

./: .gitignore  CLAUDE.md  JOYAGENT_分析报告_中文.md  README.md  README_DataAgent.md  未命名.md
genie-backend/: pom.xml
genie-backend/src/main/resources/: application.yml
genie-tool/: .env_template  .gitignore  PROJECT_ANALYSIS.md  pyproject.toml  server.py
genie-tool/genie_tool/api/: tool.py
genie-tool/genie_tool/db/: file_table_op.py
genie-tool/genie_tool/model/: context.py  protocal.py
genie-tool/genie_tool/prompt/: analysis.yaml  nl2sql.yaml  plan_sop.yaml  report.yaml  table_rag.yaml
genie-tool/genie_tool/tool/: auto_analysis.py  code_interpreter.py  deepsearch.py  nl2sql.py  plan_sop.py  report.py
genie-tool/genie_tool/tool/analysis_component/: analysis_tool.py  data_model.py  insights.py  schema_data.py
genie-tool/genie_tool/tool/table_rag/: __init__.py  es_client.py  qdrant_recall.py  retriever.py  table_column_filter.py  table_rag.py  utils.py
genie-tool/genie_tool/util/: log_util.py  prompt_util.py  qdrant_utils.py
ui/: .env  build.sh  package.json  pnpm-lock.yaml
ui/jdos/nginx/: map.conf
ui/src/assets/relayFonts/: JDIF_RelayIcon.h  RelayIcon.eot  RelayIcon.html  RelayIcon.js  icon_RelayIcon.js  icon_RelayIcon.json  icon_RelayIcon.xml
ui/src/assets/styles/: RelayIcon.css
ui/src/components/ActionPanel/: useContent.ts
ui/src/components/ActionView/: FileList.tsx
ui/src/components/ChatView/: index.tsx
ui/src/services/: agent.ts
ui/src/types/: chat.ts  message.ts
ui/src/utils/: chat.ts  constants.ts  querySSE.ts
(+172 files in other folders)
